02/12/2013:
	- Changes to IIPImage, TPTImage and KakaduImage class contstructors to use more efficient
	  member initializer lists, which are also necessary for compilation with clang compiler.


25/11/2013:
	- Bug on red/green/blue colormaps fixed. Adding colormap inversion function (Chiara Marmo).


22/10/2013:
	- Bittype compatibility has been completely reviewed. After normalization all processing
	  is done in float (Chiara Marmo).


07/09/2013:
	- Modified PFL to handle single points as well as profiles. Thus syntax for single
	  points: PFL=<resolution>:<x>,<y> and for profiles PFL=<resolution>:<x1>,<y1>-<x2>,<y2>


03/09/2013:
	- Updated PFL command to also handle multi-spectral data.


02/09/2013:
	- Modified PFL command to use JSON and implemented vertical profiles.


28/08/2013:
	- Added PFL command for obtaining raw X profiles of data. Syntax
	  is <resolution>:<x1>,<y1>-<x2>,<y2>. Only horizontal profiles are supported so far.


23/08/2013:
	- Fix to OpenMP code in Transform.cc for compatibility with Intel compiler - thanks
	  Emmanuel Bertin.
	- Addition of extra timing output in JTL.cc


06/08/2013:
	- Moved setenv/unsetenv function definitions to Main.cc where they are now needed following
	  movement of timezone setting code there.


31/07/2013:
	- Fix to JTL.cc and TPTImage.cc for multispectral sequences consisting of images of
	  different bit depths.


23/07/2013:
	- Fix to KakaduImage.cc to enable correct handling of bilevel images.
	- Fix to quality layer decoding - variables moved directly into IIPImage class
	- Scaling of 8 and 16 bit spectral data to normalized 0.0->1.0 float in SPECTRA.cc


08/07/2013:
	- Fix to configure.in for libmemcached configuration problem on Fedora.


02/07/2013:
        - Optimizations to FIF.cc. Unnecessary file header reading is now avoided as top
          level IIPImage class cache fully utilized. Cleanup of constructor code of IIPImage,