@@ -26,44 +26,56 @@
 #ifndef _CACHE_H
 #define _CACHE_H
 
-// Remove our deprecated warnings for now. We should upgrade our hash_maps to
-// unordered_maps, however
-#undef __DEPRECATED
 
-// Use the hashmap extensions if we are using >= gcc 3.1
-#ifdef __GNUC__
+// Fix missing snprintf in Windows
+#if _MSC_VER
+#define snprintf _snprintf
+#endif
 
-#if (__GNUC__ == 3 && __GNUC_MINOR__ >= 1) || (__GNUC__ >= 4)
-#define USE_HASHMAP 1
+
+
+// Test for available map types. Try to use an efficient hashed map type if possible
+#if defined(HAVE_TR1_UNORDERED_MAP)
+#include <tr1/unordered_map>
+#define HASHMAP std::tr1::unordered_map
+// Need to define the hash function
+namespace std {
+  namespace tr1 {
+    template<> struct hash< const std::string > {
+      size_t operator()( const std::string& x ) const {
+	return hash< const char* >()( x.c_str() );
+      }
+    };
+  }
+}
+
+// Use the gcc hash_map extension if we have it
+#elif defined(HAVE_EXT_HASH_MAP)
 #include <ext/hash_map>
-namespace __gnu_cxx
-{
+#define HASHMAP __gnu_cxx::hash_map
+// Need to define the hash function
+namespace __gnu_cxx {
   template<> struct hash< const std::string > {
     size_t operator()( const std::string& x ) const {
       return hash< const char* >()( x.c_str() );
     }
   };
 }
-#endif
 
-// And the high performance memory pool allocator if >= gcc 3.4
-#if (__GNUC__ == 3 && __GNUC_MINOR__ >= 4) || (__GNUC__ >= 4)
-#define POOL_ALLOCATOR 1
+// If no hash type available, just use map
+#else
+#include <map>
+#define HASHMAP std::map
+
+#endif // End of #if defined
+
+
+
+// Try to use the gcc high performance memory pool allocator (available in gcc >= 3.4)
+#ifdef HAVE_EXT_POOL_ALLOCATOR
 #include <ext/pool_allocator.h>
 #endif
 
-#endif
-
-
-#ifndef USE_HASHMAP
-#include <map>
-#endif
-
-
-// Fix missing snprintf in Windows
-#if _MSC_VER
-#define snprintf _snprintf
-#endif
 
 
 #include <iostream>
@@ -90,7 +102,7 @@ class Cache {
   unsigned long currentSize;
 
   /// Main cache storage typedef
-#ifdef POOL_ALLOCATOR
+#ifdef HAVE_EXT_POOL_ALLOCATOR
   typedef std::list < std::pair<const std::string,RawTile>,
     __gnu_cxx::__pool_alloc< std::pair<const std::string,RawTile> > > TileList;
 #else
@@ -101,19 +113,16 @@ class Cache {
   typedef std::list < std::pair<const std::string,RawTile> >::iterator List_Iter;
 
   /// Index typedef
-#ifdef USE_HASHMAP
-#ifdef POOL_ALLOCATOR
-  typedef __gnu_cxx::hash_map < const std::string, List_Iter,
+#ifdef HAVE_EXT_POOL_ALLOCATOR
+  typedef HASHMAP < const std::string, List_Iter,
     __gnu_cxx::hash< const std::string >,
     std::equal_to< const std::string >,
     __gnu_cxx::__pool_alloc< std::pair<const std::string, List_Iter> >
     > TileMap;
 #else
-  typedef __gnu_cxx::hash_map < const std::string,List_Iter > TileMap;
+  typedef HASHMAP < const std::string,List_Iter > TileMap;
 #endif
-#else
-  typedef std::map < const std::string,List_Iter > TileMap;
-#endif
+
 
   /// Main cache storage object
   TileList tileList;
